--- a/index.html
+++ b/index.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>wed developer porttfolio</title>
-</head>
-<body>
-  <header></header>
-  <main></main>
-  <footer></footer>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>wed developer porttfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style/style.css" />
+  </head>
+  <body class="work-sans-normal">
+    <header class="header">
+      <nav>
+        <h3 class="nav-title">Ma<span class="text-primasy">r</span>y</h3>
+        <ul>
+          <li><a class="dark-2" href="">protfolio</a></li>
+          <li><a class="dark-2" href="">blog</a></li>
+          <li>
+            <a href=""><button class="btn-primary">hire me</button></a>
+          </li>
+        </ul>
+      </nav>
+      <div class="banner">
+        <div class="banner-contant">
+          <h4 class="banner-greetings dark-2">Hi, i am</h4>
+          <h1 class="baner-title">Mary Hardy</h1>
+          <p class="baner-discription">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. olaborum?
+          </p>
+          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary">Contact</button>
+        </div>
+        <img class="banner-profile-pic" src="images/hardy.png" alt="" />
+      </div>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
