--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         <img class="banner-profile-pic" src="images/hardy.png" alt="" />
       </div>
     </header>
+    <!--header section end -->
+    <!-- main section start -->
     <main>
       <section class="about secondary-bg">
         <h3 class="section-title">About Me</h3>
@@ -66,7 +68,140 @@
           </div>
         </div>
       </section>
+      <!-- skills section start -->
+      <section class="skills">
+        <h1 class="section-title text-center">What I do</h1>
+        <p class="section-description text-center">
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata.
+        </p>
+        <div class="skills-container">
+          <div class="skill">
+            <img src="images/icons/js.png" alt="" />
+            <h4 class="skill-title">Vanilla javaScript</h4>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/react.png" alt="" />
+            <h4 class="skill-title">React</h4>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/nodejs.png" alt="" />
+            <h4 class="skill-title">Node.js</h4>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/mongo.png" alt="" />
+            <h4 class="skill-title">MongoDB</h4>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- skills section end -->
+      <!-- resume section start -->
+      <section class="resume">
+        <h3 class="section-title text-center">A summary of My Resume</h3>
+        <div class="resume-container">
+          <div class="resume-column">
+            <h3 class="resume-column-title">My Education</h3>
+            <div class="experience">
+              <h4 class="experience-title">Master in Computer Engineering</h4>
+              <h5 class="experience-sub-title">
+                Harvard University / 2015 - 2017
+              </h5>
+              <div class="experience-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
+            </div>
+            <hr />
+            <div class="experience">
+              <h4 class="experience-title">Master in Computer Engineering</h4>
+              <h5 class="experience-sub-title">
+                Harvard University / 2015 - 2017
+              </h5>
+              <div class="experience-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
+            </div>
+            <hr />
+            <div class="experience">
+              <h4 class="experience-title">Master in Computer Engineering</h4>
+              <h5 class="experience-sub-title">
+                Harvard University / 2015 - 2017
+              </h5>
+              <div class="experience-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
+            </div>
+          </div>
+          <div class="resume-column">
+            <h3 class="resume-column-title">My Experience</h3>
+            <div class="experience">
+              <h4 class="experience-title">Sr. Font End Developer</h4>
+              <h5 class="experience-sub-title">Apple Inc / 2020 - Current</h5>
+              <div class="experience-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
+            </div>
+            <hr />
+            <div class="experience">
+              <h4 class="experience-title">Jr. Font End Developer</h4>
+              <h5 class="experience-sub-title">Dribbble Inc / 2018 - 2022</h5>
+              <div class="experience-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
+            </div>
+            <hr />
+            <div class="experience">
+              <h4 class="experience-title">HTML Developer</h4>
+              <h5 class="experience-sub-title">Adobe Inc / 2017 - 2018</h5>
+              <div class="experience-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="text-center">
+          <button class="btn-primary resume-download-cv">Download CV</button>
+        </div>
+      </section>
+
+      <!-- resume section end -->
     </main>
+    <!-- main section end -->
+
     <footer></footer>
   </body>
 </html>
