--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style/style.css" />
+    <script
+      src="https://kit.fontawesome.com/fd83786f44.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body class="work-sans-normal">
     <header class="header secondary-bg">
@@ -31,8 +35,12 @@
           <p class="baner-discription">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. olaborum?
           </p>
-          <button class="btn-primary">Download CV</button>
-          <button class="btn-primary">Contact</button>
+          <button class="btn-primary">
+            <i class="fa-solid fa-download"></i> Download CV
+          </button>
+          <button class="btn-primary">
+            <i class="fa-solid fa-phone"></i> Contact
+          </button>
         </div>
         <img class="banner-profile-pic" src="images/hardy.png" alt="" />
       </div>
@@ -194,7 +202,9 @@
           </div>
         </div>
         <div class="text-center">
-          <button class="btn-primary resume-download-cv">Download CV</button>
+          <button class="btn-primary resume-download-cv">
+            <i class="fa-solid fa-download"></i>Download CV
+          </button>
         </div>
       </section>
 
